@@ -5,6 +5,8 @@ Release 5.0.10 (unreleased)
 Bug fixes
 ---------
 
+- GUI: fix missing update of modified scalar names for groundwater flows.
+
 - GUI: fix loss of previous deactivated wall function setting when reopened.
 
 - trackcvg: allow saving state only when data is loaded and loading it when
